# bandit-modeling

./: 2armed_bandit.json  README.md  copy_of_template_for_group_project_experiment_1.py  data.json  hello.py  main.ipynb  main.py  main2.ipynb  pyproject.toml
