[project]
name = "bandit-modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "nbconvert>=7.16.6",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]
